force-app/main/default/objects/Contact/fields/Remailning_Leaves_Count_Number__c.field-meta.xml
<CustomField>
    <fullName>Remailning_Leaves_Count_Number__c</fullName>
    <formula>Account.Annual_Leave__c -  Total_Numbers_Of_Leave_Taken__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remailning Leaves Count (Number)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>