force-app/main/default/objects/Contact/fields/Total_No_Of_WFH_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Of_WFH_Days__c</fullName>
    <label>Total No Of WFH Days</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>