force-app/main/default/objects/Contact/fields/Total_Numbers_Of_Leave_Taken__c.field-meta.xml
<CustomField>
    <fullName>Total_Numbers_Of_Leave_Taken__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Numbers Of Leave Taken</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>